--- a/vipscanner.html
+++ b/vipscanner.html
@@ -28,7 +28,9 @@
   </div>
 
 <script>
-const BACKEND = "https://your-deployed-server.onrender.com"; // replace with your server URL or http://localhost:4000 for local testing
+// near top of vipscanner.html
+const BACKEND = "https://vip-backend-2kgs.onrender.com";
+ // replace with your server URL or http://localhost:4000 for local testing
 const video = document.getElementById('video');
 const canvas = document.getElementById('canvas');
 const ctx = canvas.getContext('2d');
@@ -132,3 +134,4 @@ startBtn.addEventListener('click', ()=>{
 </script>
 </body>
 </html>
+
